# Mobile-Accelerometer

./: .gitignore  CMakeLists.txt  README.md
data/: samples_sin_ampl50mV_freq_2hz_offset0.txt  samples_square_ampl50mv_freq_2hz_offset0.txt  samples_triangle_ampl100mv_freq_1hz_offset0.txt
data-processing/: plot_adc.m
include/: ads1115.h
src/: ads1115.cpp  ads1115_test.cpp
